2012-06-19  Ugo Pattacini  <ugo.pattacini@iit.it>

	* src/libYARP_dev/include/yarp/dev/CartesianControl.h,GazeControl.h:
     added events handling.

2012-06-18  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/modules/kinect/OpenNI/KinectYarpDeviceServerLib/KinectDeviceDriverServer.cpp: apply patch to include timestamps in output 
	[thanks Christian Dondrup]

2012-06-17  Ugo Pattacini  <ugo.pattacini@iit.it>

	* gaze interface: added two methods to handle the neck angle
     user tolerance.

2012-06-13  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* conf/template/YarpTweakIDL.cmake.in: reorder header files as 
	needed [thanks Elena Ceseracciu]

2012-06-12  Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/RunProcManager.cpp
	Console application termination workaround: sends
	anyway CTRL_C and CTRL_BREAK to application detected
	as windows.

2012-06-07  Ugo Pattacini  <ugo.pattacini@iit.it>

	* src/libYARP_dev/include/yarp/dev/CartesianControl.h,GazeControl.h:
	added the getInfo() method.

2012-05-25  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* conf/YarpIDL.cmake: Make IDL friendlier to use if generated code
	is being checked into version control.

2012-05-16  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/yarpserver/CMakeLists.txt: fix for Arch Linux build
	[thanks Jean-David Boucher]

	* src/yarpmanager/libymanager/src/localbroker.cpp: likewise

2012-05-16 Lorenzo Natale <lorenzo.natale@iit.it>
        * src/libYARP_dev/src/RemoteControlBoard: now support IEncodersTimed

2012-05-15  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/carriers/bayer_carrier/conversions.h: Fix calloc2
	macro on non-windows machines [thanks Carlo Ciliberto]

	* src/libYARP_OS/include/yarp/os/NetInt32.h,
	src/libYARP_OS/include/yarp/os/begin_pack_for_net.h,
	src/libYARP_OS/include/yarp/os/end_pack_for_net.h,
	src/libYARP_OS/src/DgramTwoWayStream.cpp: apply patch from
	Daniele Domenichelli update from using __LINUX__ to __linux__
	[thanks Daniele Domenichelli]
