@@ -27,10 +27,10 @@
 
 namespace yarp
 {
-	namespace dev
-	{
-		class ServerInertial;
-	}
+    namespace dev
+    {
+        class ServerInertial;
+    }
 }
 
 
@@ -48,18 +48,22 @@ namespace yarp
  * @author Alexis Maldonado, Radu Bogdan Rusu
  */
 class YARP_dev_API yarp::dev::ServerInertial : public DeviceDriver,
-			private yarp::os::Thread,
-			public yarp::os::PortReader,
-			public yarp::dev::IGenericSensor
+            private yarp::os::Thread,
+            public yarp::os::PortReader,
+            public yarp::dev::IGenericSensor
 {
 private:
     bool spoke;
     PolyDriver poly;
     IGenericSensor *IMU; //The inertial device
     IPreciselyTimed *iTimed;
-	double period;
+    double period;
     yarp::os::Port p;
     yarp::os::PortWriterBuffer<yarp::os::Bottle> writer;
+    int prev_timestamp_counter;
+    int curr_timestamp_counter;
+    int trap;
+
 public:
     /**
      * Constructor.
@@ -69,10 +73,14 @@ public:
         IMU = NULL;
         spoke = false;
         iTimed=0;
-		period = 0.005;
+        period = 0.005;
+        prev_timestamp_counter=0;
+        curr_timestamp_counter=0;
+        trap = 0;
     }
 
-    virtual ~ServerInertial() {
+    virtual ~ServerInertial()
+    {
         if (IMU != NULL) close();
     }
 
@@ -90,13 +98,13 @@ public:
     {
         p.setReader(*this);
 
-		period = config.check("period",yarp::os::Value(0.005),"maximum period").asDouble();
+        period = config.check("period",yarp::os::Value(0.005),"maximum period").asDouble();
         //Look for the device name (serial Port). Usually /dev/ttyUSB0
         yarp::os::Value *name;
         if (config.check("subdevice",name))
-			{
-				printf("Subdevice %s\n", name->toString().c_str());
-				if (name->isString())
+            {
+                printf("Subdevice %s\n", name->toString().c_str());
+                if (name->isString())
                     {
                         // maybe user isn't doing nested configuration
                         yarp::os::Property p;
@@ -106,16 +114,16 @@ public:
                         p.put("device",name->toString());
                         poly.open(p);
                     }
-				else
-					poly.open(*name);
-				if (!poly.isValid())
-					printf("cannot make <%s>\n", name->toString().c_str());
-			}
+                else
+                    poly.open(*name);
+                if (!poly.isValid())
+                    printf("cannot make <%s>\n", name->toString().c_str());
+            }
         else
-			{
-				printf("\"--subdevice <name>\" not set for server_inertial\n");
-				return false;
-			}
+            {
+                printf("\"--subdevice <name>\" not set for server_inertial\n");
+                return false;
+            }
         if (poly.isValid())
             poly.view(IMU);
 
@@ -132,20 +140,22 @@ public:
             p.open("/inertial");
 
         //Look for the portname to register (--name option)
-        //			p.open(config.check("name", Value("/inertial")).asString());
-			
+        //p.open(config.check("name", Value("/inertial")).asString());
+            
         if (IMU!=NULL)
-			{
-				start();
-				return true;
-			}
+            {
+                start();
+                return true;
+            }
         else
             return false;
     }
 
     virtual bool close()
     {
-        if (IMU != NULL) {
+        printf("Closing Server Inertial...\n");
+        if (IMU != NULL)
+        {
             stop();
             IMU = NULL;
             return true;
@@ -157,33 +167,33 @@ public:
     virtual bool getInertial(yarp::os::Bottle &bot)
     {
         if (IMU==NULL)
-			{
-				return false;
-			}
+            {
+                return false;
+            }
         else
-			{
-				int nchannels;
-				IMU->getChannels (&nchannels);
-				
-				yarp::sig::Vector indata(nchannels);
-				bool worked(false);
+            {
+                int nchannels;
+                IMU->getChannels (&nchannels);
+                
+                yarp::sig::Vector indata(nchannels);
+                bool worked(false);
 
-				worked=IMU->read(indata);
-				if (worked)
+                worked=IMU->read(indata);
+                if (worked)
                     {
                         bot.clear();
-					
-			    		// Euler+accel+gyro+magn orientation values
+                    
+                        // Euler+accel+gyro+magn orientation values
                         for (int i = 0; i < nchannels; i++)
                             bot.addDouble (indata[i]);
                     }
-				else
+                else
                     {
                         bot.clear(); //dummy info.
                     }
 
-				return(worked);
-			}
+                return(worked);
+            }
     }
 
     virtual void run()
@@ -191,36 +201,50 @@ public:
         double before, now;
         printf("Server Inertial starting\n");
         while (!isStopping())
-			{
-				before = yarp::os::Time::now();
-				if (IMU!=NULL)
+            {
+                before = yarp::os::Time::now();
+                if (IMU!=NULL)
                     {
                         yarp::os::Bottle& bot = writer.get();
-                        getInertial(bot);
-						yarp::os::Stamp ts;
-						if (iTimed)
-							ts=iTimed->getLastInputStamp();
-						else
-							ts.update();
+                        bool res = getInertial(bot);
+                        if (res)
+                        {
+                            yarp::os::Stamp ts;
+                            if (iTimed)
+                                ts=iTimed->getLastInputStamp();
+                            else
+                                ts.update();
 
-                        if (!spoke)
+
+                            curr_timestamp_counter = ts.getCount();
+
+                            if (curr_timestamp_counter!=prev_timestamp_counter)
                             {
-                                printf("Writing an Inertial measurement.\n");
-                                spoke = true;
+                                if (!spoke)
+                                    {
+                                        printf("Writing an Inertial measurement.\n");
+                                        spoke = true;
+                                    }
+                                p.setEnvelope(ts);
+                                writer.write();
                             }
-
-                        p.setEnvelope(ts);
-                        writer.write();
+                            else
+                            {
+                                trap++;
+                            }
+                            
+                            prev_timestamp_counter = curr_timestamp_counter;
+                        }
                     }
 
-				/// wait 5 ms.
-				now = yarp::os::Time::now();
-				if ((now - before) < period) {
-					double k = period-(now-before);
-					yarp::os::Time::delay(k);
-				}
-			}
-        printf("Server Inertial stopping\n");
+                /// wait 5 ms.
+                now = yarp::os::Time::now();
+                if ((now - before) < period) {
+                    double k = period-(now-before);
+                    yarp::os::Time::delay(k);
+                }
+            }
+        printf("Server Intertial closed\n");
     }
 
     virtual bool read(ConnectionReader& connection)
@@ -229,8 +253,6 @@ public:
         cmd.read(connection);
         // printf("command received: %s\n", cmd.toString().c_str());
 
-
-            
         // We receive a command but don't do anything with it.
         return true;
     }
@@ -240,7 +262,7 @@ public:
         if (IMU == NULL) { return false; }
         return IMU->read (out);
     }
-		
+
     virtual bool getChannels(int *nc)
     {
         if (IMU == NULL) { return false; }
